--- a/개인프로젝트 소스, 시각화.ipynb
+++ b/개인프로젝트 소스, 시각화.ipynb
@@ -3037,12 +3037,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "d5109eae",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T03:48:28.925327Z",
-     "start_time": "2025-01-17T03:48:17.053446Z"
+     "end_time": "2025-01-20T05:22:31.316283Z",
+     "start_time": "2025-01-20T05:22:18.127405Z"
     }
    },
    "outputs": [],
@@ -3050,6 +3050,33 @@
     "import numpy as np\n",
     "from tensorflow.keras.models import Sequential  # 모델 생성\n",
     "from tensorflow.keras.layers import Dense, Input, Dropout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d788ac54",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-20T05:23:31.210010Z",
+     "start_time": "2025-01-20T05:23:31.205019Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.23.5'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.__version__"
    ]
   },
   {
@@ -3225,12 +3252,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "id": "7f7cb9bf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-16T06:32:39.009168Z",
-     "start_time": "2025-01-16T06:32:37.272846Z"
+     "end_time": "2025-01-20T05:59:34.298983Z",
+     "start_time": "2025-01-20T05:59:32.565299Z"
     }
    },
    "outputs": [],
@@ -3240,12 +3267,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "03631dac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T03:40:01.374806Z",
-     "start_time": "2025-01-17T03:40:00.877085Z"
+     "end_time": "2025-01-20T05:58:42.128198Z",
+     "start_time": "2025-01-20T05:58:42.124208Z"
     }
    },
    "outputs": [],
@@ -3255,12 +3282,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "1c78a0ed",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T03:40:38.889392Z",
-     "start_time": "2025-01-17T03:40:38.044433Z"
+     "end_time": "2025-01-20T05:58:43.730427Z",
+     "start_time": "2025-01-20T05:58:42.875962Z"
     }
    },
    "outputs": [],
@@ -3270,142 +3297,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "c4ade7bc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T03:43:19.193636Z",
-     "start_time": "2025-01-17T03:43:19.180482Z"
+     "end_time": "2025-01-20T05:59:17.033967Z",
+     "start_time": "2025-01-20T05:59:17.028685Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>user_product_reorder_rate</th>\n",
-       "      <th>user_product_reorder_days</th>\n",
-       "      <th>user_total_products</th>\n",
-       "      <th>user_reorder_rate</th>\n",
-       "      <th>user_avg_cart_size</th>\n",
-       "      <th>product_reorder_rate</th>\n",
-       "      <th>product_avg_add_to_cart</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2104452</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>249</td>\n",
-       "      <td>0.795181</td>\n",
-       "      <td>12.244980</td>\n",
-       "      <td>0.833370</td>\n",
-       "      <td>8.206471</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1778621</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0.542857</td>\n",
-       "      <td>3.828571</td>\n",
-       "      <td>0.369369</td>\n",
-       "      <td>10.798799</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>693261</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>115</td>\n",
-       "      <td>0.782609</td>\n",
-       "      <td>8.495652</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>12.750000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>987498</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>166</td>\n",
-       "      <td>0.765060</td>\n",
-       "      <td>9.801205</td>\n",
-       "      <td>0.638332</td>\n",
-       "      <td>10.665403</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>907009</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>91</td>\n",
-       "      <td>0.659341</td>\n",
-       "      <td>10.681319</td>\n",
-       "      <td>0.413043</td>\n",
-       "      <td>7.630435</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  user_product_reorder_rate  user_product_reorder_days  \\\n",
-       "0     2104452                        0.0                        3.0   \n",
-       "1     1778621                        0.0                        3.0   \n",
-       "2      693261                        0.0                        7.0   \n",
-       "3      987498                        1.0                        6.5   \n",
-       "4      907009                        0.0                        2.0   \n",
-       "\n",
-       "   user_total_products  user_reorder_rate  user_avg_cart_size  \\\n",
-       "0                  249           0.795181           12.244980   \n",
-       "1                   35           0.542857            3.828571   \n",
-       "2                  115           0.782609            8.495652   \n",
-       "3                  166           0.765060            9.801205   \n",
-       "4                   91           0.659341           10.681319   \n",
-       "\n",
-       "   product_reorder_rate  product_avg_add_to_cart  target  \n",
-       "0              0.833370                 8.206471       0  \n",
-       "1              0.369369                10.798799       0  \n",
-       "2              0.000000                12.750000       0  \n",
-       "3              0.638332                10.665403       0  \n",
-       "4              0.413043                 7.630435       0  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sampled_data.head()"
+    "sampled_data = sampled_data.iloc[1:]"
    ]
   },
   {
@@ -48006,11 +47908,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6cb43925",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-20T05:17:37.462438Z",
+     "start_time": "2025-01-20T05:17:37.453456Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.10.9 | packaged by Anaconda, Inc. | (main, Mar  1 2023, 18:18:15) [MSC v.1916 64 bit (AMD64)]'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.version"
+   ]
   },
   {
    "cell_type": "code",
