--- a/개인프로젝트 소스, 시각화.ipynb
+++ b/개인프로젝트 소스, 시각화.ipynb
@@ -3282,12 +3282,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "d5109eae",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-23T04:03:47.068290Z",
-     "start_time": "2025-01-23T04:03:35.046263Z"
+     "end_time": "2025-01-24T03:21:58.857324Z",
+     "start_time": "2025-01-24T03:21:45.770107Z"
     }
    },
    "outputs": [],
@@ -3295,6 +3295,34 @@
     "import numpy as np\n",
     "from tensorflow.keras.models import Sequential  # 모델 생성\n",
     "from tensorflow.keras.layers import Dense, Input, Dropout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "28e19efd",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-24T03:22:05.702895Z",
+     "start_time": "2025-01-24T03:22:05.694916Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.10.0'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "tf.__version__"
    ]
   },
   {
@@ -4482,6 +4510,32 @@
    "source": [
     "# 모델 평가\n",
     "model.evaluate(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f7c72479",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-24T03:36:51.193817Z",
+     "start_time": "2025-01-24T03:36:50.647362Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import load_model\n",
+    "model = load_model('model/model.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e81302c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.predict()"
    ]
   },
   {
